--- a/spring-demo-web/pom.xml
+++ b/spring-demo-web/pom.xml
@@ -10,10 +10,20 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>spring-demo-web</artifactId>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
