--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>spring-demo-mysql</module>
         <module>spring-demo-h2</module>
         <module>spring-demo-web</module>
+        <module>spring-demo-model</module>
     </modules>
 
     <dependencyManagement>
