--- a/spring-demo-model/pom.xml
+++ b/spring-demo-model/pom.xml
@@ -9,25 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-demo-mysql</artifactId>
-
+    <artifactId>spring-demo-model</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>com.feng</groupId>
-            <artifactId>spring-demo-model</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-core</artifactId>
-            <version>3.4.3</version>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
-
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
-
 </project>
