--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
         <spring.boot.starter.version>2.6.3</spring.boot.starter.version>
-        <lombok.version>RELEASE</lombok.version>
+        <lombok.version>1.18.22</lombok.version>
         <h2.version>1.4.196</h2.version>
     </properties>
 
@@ -54,6 +54,11 @@
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-core</artifactId>
+                <version>3.4.3</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>3.4.3</version>
             </dependency>
             <dependency>
