--- a/spring-demo-h2/pom.xml
+++ b/spring-demo-h2/pom.xml
@@ -30,6 +30,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.feng</groupId>
+            <artifactId>spring-demo-model</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
