--- a/spring-demo-kafka/pom.xml
+++ b/spring-demo-kafka/pom.xml
@@ -11,6 +11,14 @@
 
     <artifactId>spring-demo-kafka</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.feng</groupId>
+            <artifactId>spring-demo-model</artifactId>
+        </dependency>
+    </dependencies>
+
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
