--- a/spring-demo-redis/pom.xml
+++ b/spring-demo-redis/pom.xml
@@ -16,4 +16,12 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+
+    <dependencies>
+        <dependency>
+            <groupId>com.feng</groupId>
+            <artifactId>spring-demo-model</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
