--- a/spring-demo-web/src/main/resources/application.yml
+++ b/spring-demo-web/src/main/resources/application.yml
@@ -2,23 +2,24 @@ server:
   port: 8888
 
 spring:
+  jpa:
+    open-in-view: false
   servlet:
     multipart:
       max-file-size: 10MB
       max-request-size: 20MB
   datasource:
-    hikari:
+    h2:
+      driver-class-name: org.h2.Driver
+      jdbc-url: jdbc:h2:mem:test
+    mysql:
+      jdbc-url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false
       username: root
       password: password
       connection-timeout: 1000
       minimum-idle: 10
       maximum-pool-size: 30
       driver-class-name: com.mysql.cj.jdbc.Driver
-      jdbc-url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    h2:
-      username: root
-      password: password
-      driver-class-name: org.he.Driver
   h2:
     console:
       enabled: true
