--- a/spring-demo-mysql/pom.xml
+++ b/spring-demo-mysql/pom.xml
@@ -16,6 +16,16 @@
         <dependency>
             <groupId>com.feng</groupId>
             <artifactId>spring-demo-model</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>spring-beans</artifactId>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>spring-core</artifactId>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
