--- a/spring-demo-h2/pom.xml
+++ b/spring-demo-h2/pom.xml
@@ -33,6 +33,7 @@
         <dependency>
             <groupId>com.feng</groupId>
             <artifactId>spring-demo-model</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
             <exclusions>
                 <exclusion>
                     <artifactId>spring-boot-starter-jdbc</artifactId>
