--- a/spring-demo-redis/pom.xml
+++ b/spring-demo-redis/pom.xml
@@ -21,6 +21,7 @@
         <dependency>
             <groupId>com.feng</groupId>
             <artifactId>spring-demo-model</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
