--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,12 @@
                 <artifactId>jackson-databind</artifactId>
                 <version>2.13.1</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/com.ctrip.framework.apollo/apollo-client -->
+            <dependency>
+                <groupId>com.ctrip.framework.apollo</groupId>
+                <artifactId>apollo-client</artifactId>
+                <version>1.9.2</version>
+            </dependency>
 
             <!-- 子模块  -->
             <dependency>
