--- a/spring-demo-mysql/pom.xml
+++ b/spring-demo-mysql/pom.xml
@@ -19,6 +19,10 @@
             <version>8.0.21</version>
         </dependency>
         <dependency>
+            <groupId>com.ctrip.framework.apollo</groupId>
+            <artifactId>apollo-client</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.feng</groupId>
             <artifactId>spring-demo-model</artifactId>
             <version>0.0.1-SNAPSHOT</version>
