--- a/spring-demo-utils/pom.xml
+++ b/spring-demo-utils/pom.xml
@@ -22,6 +22,10 @@
             <artifactId>spring-demo-model</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.ctrip.framework.apollo</groupId>
+            <artifactId>apollo-client</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
