--- a/spring-demo-web/pom.xml
+++ b/spring-demo-web/pom.xml
@@ -24,6 +24,11 @@
         </dependency>
         <dependency>
             <groupId>com.feng</groupId>
+            <artifactId>spring-demo-redis</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.feng</groupId>
             <artifactId>spring-demo-mysql</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
