--- a/spring-demo-utils/pom.xml
+++ b/spring-demo-utils/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>srping-demo-utils</artifactId>
+    <artifactId>spring-demo-utils</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
