--- a/spring-demo-web/src/main/resources/application.properties
+++ b/spring-demo-web/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
 app.id=spring-demo
 apollo.bootstrap.enabled=true
+logging.file.path=D:\\IdeaProjects\\log\\spring-demo
