--- a/spring-demo-web/src/main/resources/application.properties
+++ b/spring-demo-web/src/main/resources/application.properties
@@ -2,6 +2,29 @@ server.port=8888
 spring.jpa.open-in-view=false
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
-app.id=spring-demo
-apollo.bootstrap.enabled=true
+# h2 config
+spring.datasource.h2.driver-class-name=org.h2.Driver
+spring.datasource.h2.jdbc-url=jdbc:h2:mem:test
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2/console
+spring.h2.console.settings.web-admin-password=password
+spring.h2.console.settings.trace=true
+spring.h2.console.settings.web-allow-others=true
+# mysql
+spring.datasource.mysql.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.mysql.jdbc-url=jdbc:mysql://localhost:3306/demo?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.mysql.username=root
+spring.datasource.mysql.password=4321red@zz
+spring.datasource.mysql.connection-timeout=1000
+spring.datasource.mysql.minimum-idle=10
+spring.datasource.mysql.maximum-pool-size=30
+# redis
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+# minio
+minio.endpoint=http://124.223.158.96:9000
+minio.accessKey=admin
+minio.secretKey=4321red@zz
+minio.bucket=spring-demo
+
 logging.file.path=D:\\IdeaProjects\\log\\spring-demo
