--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,13 @@
                 <artifactId>mysql-connector-java</artifactId>
                 <version>8.0.21</version>
             </dependency>
+            <!-- kafka -->
+            <!-- https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka -->
+            <dependency>
+                <groupId>org.springframework.kafka</groupId>
+                <artifactId>spring-kafka</artifactId>
+                <version>2.8.3</version>
+            </dependency>
             <!-- slf4j -->
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -201,12 +208,6 @@
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
                 <version>2.13.1</version>
-            </dependency>
-            <!-- https://mvnrepository.com/artifact/com.ctrip.framework.apollo/apollo-client -->
-            <dependency>
-                <groupId>com.ctrip.framework.apollo</groupId>
-                <artifactId>apollo-client</artifactId>
-                <version>1.9.2</version>
             </dependency>
             <!-- https://mvnrepository.com/artifact/cn.hutool/hutool-all -->
             <dependency>
