--- a/spring-demo-web/src/main/resources/application.properties
+++ b/spring-demo-web/src/main/resources/application.properties
@@ -26,5 +26,14 @@ minio.endpoint=http://124.223.158.96:9000
 minio.accessKey=admin
 minio.secretKey=4321red@zz
 minio.bucket=spring-demo
+# kafka
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.listener.poll-timeout=3000s
+spring.kafka.listener.concurrency=5
+spring.kafka.topic.test=topic1
 
 logging.file.path=D:\\IdeaProjects\\log\\spring-demo
