--- a/spring-demo-minio/pom.xml
+++ b/spring-demo-minio/pom.xml
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>com.feng</groupId>
             <artifactId>spring-demo-model</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${spring-demo.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
