--- a/spring-demo-utils/pom.xml
+++ b/spring-demo-utils/pom.xml
@@ -75,7 +75,7 @@
         <dependency>
             <groupId>com.feng</groupId>
             <artifactId>spring-demo-model</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${spring-demo.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
