--- a/spring-demo-web/src/main/resources/application.properties
+++ b/spring-demo-web/src/main/resources/application.properties
@@ -35,5 +35,7 @@ spring.kafka.consumer.value-serializer=org.apache.kafka.common.serialization.Str
 spring.kafka.listener.poll-timeout=3000s
 spring.kafka.listener.concurrency=5
 spring.kafka.topic.test=topic1
+# elasticsearch
+spring.elasticsearch.uris=124.223.158.96:9200
 
 logging.file.path=D:\\IdeaProjects\\log\\spring-demo
