--- a/spring-demo-web/src/main/resources/application.properties
+++ b/spring-demo-web/src/main/resources/application.properties
@@ -39,3 +39,8 @@ spring.kafka.topic.test=topic1
 spring.elasticsearch.uris=124.223.158.96:9200
 
 logging.file.path=D:\\IdeaProjects\\log\\spring-demo
+
+spring.jpa.show-sql=true
+
+mybatis.configLocation=classpath:mybatis/mybatis-config.xml
+
