--- a/spring-demo-mysql/pom.xml
+++ b/spring-demo-mysql/pom.xml
@@ -27,6 +27,10 @@
                     <artifactId>spring-beans</artifactId>
                     <groupId>org.springframework</groupId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>spring-boot-starter-jdbc</artifactId>
+                    <groupId>org.springframework.boot</groupId>
+                </exclusion>
             </exclusions>
         </dependency>
     </dependencies>
