--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
                 <artifactId>spring-boot-autoconfigure</artifactId>
                 <version>${spring-boot-starter.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-mail</artifactId>
+                <version>${spring-boot-starter.version}</version>
+            </dependency>
             <!-- spring boot end -->
             <!-- lombok -->
             <dependency>
