--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.feng</groupId>
     <artifactId>spring-demo</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>pom</packaging>
     <name>Spring Demo</name>
     <description>Spring Demo</description>
@@ -14,7 +14,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
-        <spring-demo.version>0.0.1-SNAPSHOT</spring-demo.version>
+        <spring-demo.version>1.0</spring-demo.version>
         <spring-boot-starter.version>2.6.3</spring-boot-starter.version>
         <mybatis-plus-boot-starter.version>3.4.3</mybatis-plus-boot-starter.version>
         <logback.version>1.2.10</logback.version>
@@ -36,7 +36,35 @@
         <module>spring-demo-itext7</module>
         <module>spring-demo-office</module>
         <module>spring-demo-es7</module>
+        <module>spring-demo-common</module>
     </modules>
+
+    <dependencies>
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
+        <!-- slf4j -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.32</version>
+        </dependency>
+        <!-- logback -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-access</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+        <!-- logback end -->
+    </dependencies>
 
     <dependencyManagement>
         <dependencies>
@@ -72,12 +100,7 @@
                 <version>${spring-boot-starter.version}</version>
             </dependency>
             <!-- spring boot end -->
-            <!-- lombok -->
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <version>${lombok.version}</version>
-            </dependency>
+
             <!-- mybatis plus -->
             <dependency>
                 <groupId>com.baomidou</groupId>
@@ -117,24 +140,7 @@
                 <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
                 <version>2.6.3</version>
             </dependency>
-            <!-- slf4j -->
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-api</artifactId>
-                <version>1.7.32</version>
-            </dependency>
-            <!-- logback -->
-            <dependency>
-                <groupId>ch.qos.logback</groupId>
-                <artifactId>logback-access</artifactId>
-                <version>${logback.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>ch.qos.logback</groupId>
-                <artifactId>logback-classic</artifactId>
-                <version>${logback.version}</version>
-            </dependency>
-            <!-- logback end -->
+
             <!--  itext7 start  -->
             <!-- always needed -->
             <dependency>
@@ -247,62 +253,58 @@
             </dependency>
             <!-- 子模块  -->
             <dependency>
-                <groupId>com.feng.demo</groupId>
+                <groupId>com.feng</groupId>
                 <artifactId>spring-demo-utils</artifactId>
                 <version>${spring-demo.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.feng.demo</groupId>
+                <groupId>com.feng</groupId>
                 <artifactId>spring-demo-model</artifactId>
                 <version>${spring-demo.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.feng.demo</groupId>
+                <groupId>com.feng</groupId>
                 <artifactId>spring-demo-h2</artifactId>
                 <version>${spring-demo.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.feng.demo</groupId>
+                <groupId>com.feng</groupId>
                 <artifactId>spring-demo-mysql</artifactId>
                 <version>${spring-demo.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.feng.demo</groupId>
+                <groupId>com.feng</groupId>
                 <artifactId>spring-demo-redis</artifactId>
                 <version>${spring-demo.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.feng.demo</groupId>
+                <groupId>com.feng</groupId>
                 <artifactId>spring-demo-kafka</artifactId>
                 <version>${spring-demo.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.feng.demo</groupId>
+                <groupId>com.feng</groupId>
                 <artifactId>spring-demo-minio</artifactId>
                 <version>${spring-demo.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.feng.demo</groupId>
+                <groupId>com.feng</groupId>
                 <artifactId>spring-demo-itext7</artifactId>
                 <version>${spring-demo.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.feng.demo</groupId>
+                <groupId>com.feng</groupId>
                 <artifactId>spring-demo-office</artifactId>
                 <version>${spring-demo.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.feng.demo</groupId>
+                <groupId>com.feng</groupId>
                 <artifactId>spring-demo-es7</artifactId>
                 <version>${spring-demo.version}</version>
             </dependency>
             <!-- 子模块END  -->
         </dependencies>
     </dependencyManagement>
-
-    <dependencies>
-
-    </dependencies>
 
 
     <build>
