--- a/spring-demo-itext7/pom.xml
+++ b/spring-demo-itext7/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>spring-demo</artifactId>
         <groupId>com.feng</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -65,5 +65,19 @@
         </dependency>
         <!--  itext7 end  -->
     </dependencies>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                    <include>**/*.bmp</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
+    </build>
 
 </project>
