--- a/spring-demo-mysql/pom.xml
+++ b/spring-demo-mysql/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>spring-demo</artifactId>
         <groupId>com.feng</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -22,16 +22,6 @@
             <groupId>com.feng</groupId>
             <artifactId>spring-demo-model</artifactId>
             <version>${spring-demo.version}</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>spring-beans</artifactId>
-                    <groupId>org.springframework</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>spring-boot-starter-jdbc</artifactId>
-                    <groupId>org.springframework.boot</groupId>
-                </exclusion>
-            </exclusions>
         </dependency>
     </dependencies>
 
