--- a/spring-demo-office/pom.xml
+++ b/spring-demo-office/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>spring-demo</artifactId>
         <groupId>com.feng</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -84,11 +84,6 @@
         <dependency>
             <groupId>com.deepoove</groupId>
             <artifactId>poi-tl</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 
