--- a/spring-demo-utils/pom.xml
+++ b/spring-demo-utils/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>spring-demo</artifactId>
         <groupId>com.feng</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -76,11 +76,6 @@
             <groupId>com.feng</groupId>
             <artifactId>spring-demo-model</artifactId>
             <version>${spring-demo.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 
